<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        android:background="@color/backgroundColor"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date : "
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBmiDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/BmiWeight"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editBMIWeight"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/tvBMIWeightUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="lb"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <Switch
                        android:id="@+id/switchBMIWeight"
                        style="@style/SwitchButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/colorBlack"
                        android:textSize="12dp"
                        android:textOff="lb"
                        android:textOn="kg" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/BmiHeight"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editBMIHeight"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/tvBMIunit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="ft"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editBMIinches"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/tvBMIunitInch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="in"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <Switch
                        android:id="@+id/switchBMIHeight"
                        style="@style/SwitchButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/colorBlack"
                        android:textSize="12dp"
                        android:textOff="ft"
                        android:textOn="cm" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBmiCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/calculate_view"
                    android:backgroundTint="@color/colorPurple"
                    android:text="@string/BmiCalculate"
                    android:textAllCaps="false"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnClearAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="100dp"
                    android:background="@drawable/calculate_view"
                    android:backgroundTint="@color/colorPurple"
                    android:text="@string/BmiClearAll"
                    android:textAllCaps="false"
                    android:textSize="12dp"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_lable_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:paddingTop="15dp"
                android:text="@string/BmiResult"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_bmi_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="15dp"
                android:textColor="@color/colorRed"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_lable_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:paddingTop="15dp"
                android:text="@string/BmiStatus"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_bmi_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="15dp"
                android:textSize="20dp"
                android:textStyle="bold" />


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingBmiSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorBlue"
            android:clickable="true"
            android:src="@drawable/ic_save"
            android:visibility="gone"
            app:fabSize="normal"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>